Fixed facebook z-index problem in ctvp

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -82,7 +82,7 @@ body {
   height: 50px;
   width: 100%;
   opacity: 0.9;
-
+  z-index: 2;
   ul {
     margin: 0 auto;
     width: 970px;
